--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
   "name": "Parse Dashboard Example",
   "description": "An example Parse Dashboard server using the parse-dashboard module",
-  "repository": "https://github.com/cherukumilli/parse-dashboard-example",
-  "logo": "https://avatars2.githubusercontent.com/u/5217007?v=3&u=52845c74db401e9fc5df5673460f4d6835a6118a&s=200",
+  "repository": "https://github.com/louis70109/parse-dashboard-example",
   "keywords": ["node", "express", "parse", "dashboard"],
   "env": {
     "APP_ID": {
@@ -23,7 +22,7 @@
     },
     "USERNAME": {
       "description": "The username of the account to log into the dashboard.",
-      "value": "stefanayala3266@gmail.com"
+      "value": "example@gmail.com"
     },
     "PASSWORD": {
       "description": "The password of the account to log into your dashboard.",
